<resources>
    <string name="app_name">Agriculture</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">HOME</string>
    <string name="menu_weather">WEATHER</string>
    <string name="menu_marketplaces">MARKET PLACE</string>
    <string name="MARKET_or_MANDI">MARKET OR MANDI</string>
    <string name="menu_cahtboot">AI CHAT BOT</string>
    <string name="LIVEUPDATES">LIVE UPDATES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cotton_main">Cotton is the most important fibre crop not only of India but of the entire world. It provides the basic raw material (cotton fibre) to cotton textile industry.Its seed (binola) is used in vanaspati industry and can also be used as part of fodder for milch cattle to get better milk.</string>
    <string name="cotton_condition">Cotton is the crop of tropical and sub-tropical areas and requires uniformly high temperature varying between 21°C and 30°C. The growth of cotton is retarded when the temperature falls below 20°C. Frost is enemy number one of the cotton plant and it is grown in areas having at least 210 frost free days in a year. <br></br> <br></br>
    The modest requirement of water can be met by an average annual rainfall of 50- 100 cm. However, it is successfully grown in areas of lesser rainfall with the help of irrigation. About one-third of the total area under cotton cultivation is irrigated. In the year 1988-89 an area of 24 77 lakh hectares out of a total of 73.43 lakh hectares i.e. 33.73 per cent of the total area under cotton was irrigated. <br></br> <br></br>
        About 80 per cent of the total irrigated area under cotton is in Punjab, Haryana, Gujarat and Rajasthan. Moist weather and heavy rainfall at the time of boll-opening and picking are detrimental to cotton as the plant becomes vulnerable to pests and diseases. High amount of rainfall in beginning and sunny and dry weather at ripening time are very useful for a good crop. <br></br> <br></br>
Cotton is a kharif crop which requires 6 to 8 months to mature. Its time of sowing and harvesting differs in different parts of the country depending upon the climatic conditions. In Punjab and Haryana it is sown in April-May and is harvested in December-January that is before the winter frost can damage the crop. <br></br> <br></br>
        In the peninsular part of India, it is sown upto October and harvested between January and May because there is no danger of winter frost in these areas. In Tamil Nadu, it is grown both as a kharif and as a rabi crop. <br></br><br></br>
        Here the rainfall occurs after September and cotton is sown in October. The irrigated crop is sown in January-February. Most of the crop is grown mixed with other kharif crops such as maize, jowar, ragi, sesamum, castor, groundnut and some vegetables.<br></br><br></br>
        Cotton cultivation is closely related to deep black soils (regur) of the Deccan and the Malwa Plateaus and those of Gujarat. It also grows well in alluvial soils of the Satluj-Ganga Plain and red and laterite soils of the peninsular regions. Cotton quickly exhausts the fertility of soil. Therefore, regular application of manures and fertilizers to the soils is very necessary.Picking is a crucial period from the labour point of view. Since picking of cotton is not yet mechanized, a lot of cheap and efficient labour is required at this time. Normally the picking season is spread over a period of about three months.<br></br><br></br>
    </string>
    <string name="types">Three broad types of cotton are generally recognised on the basis of the length, strength and structure of its fibre.</string>
    <string name="longtype">It has the longest fibre whose length varies from 24 to 27 mm. The fibre is long, fine and shining. It is used for making fine and superior quality cloth. Obviously, it fetches the best price. There has been rapid progress in the production of long staple cotton since Independence. About half of the total cotton produced in India is a long staple. It is largely grown in Punjab, Haryana, Maharashtra, Tamil Nadu, Madhya Pradesh, Gujarat and Andhra Pradesh.</string>
    <string name="mediumtype">The length of its fibre is between 20 mm and 24 mm. About 44 per cent of the total cotton production in India is of medium staple. Rajasthan, Punjab, Tamil Nadu, Madhya Pradesh, Uttar Pradesh, Karnataka and Maharashtra are its main producers.</string>
    <string name="shorttype">This is inferior cotton with fibre less than 20 mm long. It is used for manufacturing inferior cloth and fetches less price. About 6 per cent of the total production is of short staple cotton. U.P., Andhra Pradesh, Rajasthan, Haryana and Punjab are its main producers</string>
    <string name="Sugarcane_Intro">Sugarcane (Saccharum officinarum L.) is the main sources of sugar in India and holds a prominent position as a cash crop. India is the world’s largest consumer and the second largest producer of sugar, topped only by Brazil. Nearly 2.8 lakh farmers have been cultivating sugarcane in the vast area of 4.4 lakh acres and over 11 crore people are directly or indirectly dependent on the sugar industry in the country. Sugarcane is one of the important commercial crops of India, grown in an area of 3.93 m.ha with annual production of 170 M.T. Sugarcane productivity in India is around 67 t/ha. It is one of the most important food-cum-cash crop grown in the country, providing employment to a larger number of people, in addition to earning considerable foreign exchange.</string>
    <string name="sugarcane_climate">Sugarcane is able to grow over a prolonged season. Under warm humid conditions, it can continue its growth, unless terminated by flowering. Temperatures above 50o C arrest its growth; those below 20 o C slow it down markedly and severe frost proves fatal. The crop does best in the tropical regions receiving a rainfall of 750-1200mm. For ripening, it needs a cool, dry season; but where rainfall is too heavy and prolonged, the quality of the juice tends to be low, and where the weather remains comparatively.</string>
    <string name="sugarcane_soil">Sugarcane grows best on medium heavy soils, but can also be raised on lighter soils and heavy clays, provided there is adequate irrigation available in the former type of soils and drainage is good in the latter type of soils. In many places, dark rich clay loams, 120-150cm deep, and lying on a previous substratum of murum (distintegrated traprock) ae used for this crop. In some areas.</string>
    <string name="sugar_varieties">CO – 419, CO – 740, CO – 7219 (Sanjivini), CO.M – 7125, CO – 7527, CO.M – 88121(7714), CO –8014 (Mahalaxmi), CO – 86032 (Nira), CO.C – 671, CO.C – 85061, CO - 8011, CO.M. – 7114, CO.S.I – 776,</string>
    <string name="sugar_seed">The availability of good quality cane seed materials (setts) from a nursery crop of 10-11 months are essential for better germination and good growth. The treatments included were namely control, 0.05% Bavistin, 2.5% Urea, 2.5% KCI, 2.5% KCI+Urea, 1% Hadron. Two budded setts were used for planting after treating with above chemicals. Also hot water treatment is given to prevent seed borne diseases.</string>
    <string name="sugar_sowing">Planting of sugarcane is done in three seasons that is suru- January-February, adsali - July-August and pre seasonal- October-November for planting generally ridges and furrows are prepared on 100-120cm spacing. For planting one hectare area 25-30 thousand three eye buded cane setts are required.</string>
    <string name="sugar_fertilizers">Adequate manuring is essential for sustained high yields. The general recommendation in most places is to apply half to two-thirds of the nitrogen in the form of bulky organic manures, such as farmyard manure, compost, green manure or tree leaves, and the remainder in the form of ammonium sulphate or oil-cakes or a combination of the two. For sugarcane fertilizer is recommended according to planting season and it is varied from growing tract to tract. In general for suru sugarcane 250:115:115 for Adsali 400:170:170 and for pre seasonal 340:170:170 kg nitrogen, phosphorus and potash per hectare is recommended respectively. For ratooning 250:115:115kg nitrogen, phosphorus and potash per hectare is recommended.</string>
    <string name="sugar_Irrigation">Water requirement of sugarcane varies from 2000 to 2500 mm depending upon its duration, soil type and climatological factors. For sugarcane germination, tillering, grand growth and maturity are the critical stages for irrigation. During germination phase (1-35 days) there should be enough moisture in the soil for better germination but waterlogging is undesirable as it leads to rotting of setts. During this period irrigation can be scheduled at weekly intervals. But irrigation at 10 days interval during tillering stage (36-100 days) is sufficient. The formative and grand growth stages (101-270 days) are the critical stages for water demand. During this period irrigation can be practised at weekly intervals. At the maturity phase (271 days to harvest) fortnightly irrigation is enough. Irrigation will have to be stopped at 15 days prior to harvest.</string>
    <string name="text_alcohol">What is farming?</string>
    <string name="text_coffee">How important is agriculture to the overall economy?</string>
    <string name="text_pasta">Why is agriculture important?</string>
    <string name="text_cold_drinks">What is soil health?</string>
    <string name="crop_insurance">What is crop insurance? </string>
    <string name="land_cleaing">What is land cleaning or clearing?</string>
    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>
    <string-array name="string_array_alcohol">
        <item>According to the Dictionary definition, “Farming is the act or process of working the ground, planting seeds, and growing edible plants. You can also describe raising animals for milk or meat as farming… Farming is a great way to describe the lifestyle and work of people whose jobs are in the agriculture industry.” The noun “farm,” which derives from the Medieval Latin Firma, originally meant, “A lease on farm land.” </item>

    </string-array>
    <string-array name="string_array_coffee">
        <item>Agriculture makes up about 4.5% of the nominal Gross Domestic Product of the United States. Though, in many other countries, agriculture contributes 5-10 times as much to the GDP. </item>

    </string-array>
    <string-array name="string_array_pasta">
        <item>Agriculture plays a crucial role in the economy of developing countries, and provides the main source of food, income, and employment to rural populations. For many countries, agriculture is a leading economic source, with those countries helping to provide some of the US’s food as well.</item>

    </string-array>
</resources>