<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".advisories.AgriculturalAdvisoriesFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:padding="5dp">

       <Switch
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Cotton"
           android:background="#137A01"
           android:textColor="#FFFFFF"
           android:textSize="30sp"
           android:id="@+id/cotton"
           />
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="5dp"
           android:orientation="vertical"
           android:id="@+id/cottoncrop"
           android:visibility="gone">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Cotton"
               android:textSize="30sp"
               android:gravity="center"
               android:fontFamily="serif"
               android:background="#0824BC"
               android:textColor="#FFFFFF"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#E91E63"
               android:layout_marginTop="8dp"
               android:fontFamily="serif"
               android:textSize="20sp"
               android:text="@string/cotton_main"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Conditions of Growth:"
               android:layout_marginTop="10dp"
               android:textSize="25sp"
               android:background="#0583E8"
               android:textColor="#FFFFFF"
               android:fontFamily="serif"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#E91E63"
               android:layout_marginTop="8dp"
               android:fontFamily="serif"
               android:textSize="20sp"
               android:text="@string/cotton_condition"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Types of Cotton:"
               android:layout_marginTop="10dp"
               android:textSize="25sp"
               android:background="#FF9800"
               android:textColor="#FFFFFF"
               android:fontFamily="serif"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#E91E63"
               android:layout_marginTop="8dp"
               android:fontFamily="serif"
               android:textSize="20sp"
               android:text="@string/types"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="1. Long staple cotton:"
               android:layout_marginTop="10dp"
               android:textSize="25sp"
               android:background="#0583E8"
               android:textColor="#FFFFFF"
               android:fontFamily="serif"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#E91E63"
               android:layout_marginTop="8dp"
               android:fontFamily="serif"
               android:textSize="20sp"
               android:text="@string/longtype"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="2. Medium staple cotton:"
               android:layout_marginTop="10dp"
               android:textSize="25sp"
               android:background="#0583E8"
               android:textColor="#FFFFFF"
               android:fontFamily="serif"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#E91E63"
               android:layout_marginTop="8dp"
               android:fontFamily="serif"
               android:textSize="20sp"
               android:text="@string/mediumtype"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="3. Short staple cotton:"
               android:layout_marginTop="10dp"
               android:textSize="25sp"
               android:background="#0583E8"
               android:textColor="#FFFFFF"
               android:fontFamily="serif"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#E91E63"
               android:layout_marginTop="8dp"
               android:fontFamily="serif"
               android:textSize="20sp"
               android:text="@string/shorttype"/>
       </LinearLayout>
       </ScrollView>
       <Switch
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Sugarcane"
           android:background="#137A01"
           android:textColor="#FFFFFF"
           android:textSize="30sp"
           android:layout_marginTop="10dp"
           android:id="@+id/sugarcane"
           />
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="5dp"
               android:orientation="vertical"
               android:id="@+id/sugarcanecrop"
               android:visibility="gone">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Sugarcane"
                   android:textSize="30sp"
                   android:gravity="center"
                   android:fontFamily="serif"
                   android:background="#0824BC"
                   android:textColor="#FFFFFF"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Introduction"
                   android:layout_marginTop="10dp"
                   android:textSize="25sp"
                   android:background="#0583E8"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#E91E63"
                   android:layout_marginTop="8dp"
                   android:fontFamily="serif"
                   android:textSize="20sp"
                   android:text="@string/Sugarcane_Intro"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Requirement for Sugarcane"
                   android:layout_marginTop="10dp"
                   android:textSize="25sp"
                   android:gravity="center"
                   android:background="#FF5722"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Climate"
                   android:layout_marginTop="8dp"
                   android:textSize="25sp"
                   android:background="#9C27B0"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#E91E63"
                   android:layout_marginTop="8dp"
                   android:fontFamily="serif"
                   android:textSize="20sp"
                   android:text="@string/sugarcane_climate"
                   />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Soil"
                   android:layout_marginTop="8dp"
                   android:textSize="25sp"
                   android:background="#9C27B0"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#E91E63"
                   android:layout_marginTop="8dp"
                   android:fontFamily="serif"
                   android:textSize="20sp"
                   android:text="@string/sugarcane_soil"
                   />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Varieties"
                   android:layout_marginTop="10dp"
                   android:textSize="25sp"
                   android:background="#FF9800"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#E91E63"
                   android:layout_marginTop="8dp"
                   android:fontFamily="serif"
                   android:textSize="20sp"
                   android:text="@string/sugar_varieties"/>


               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Planting"
                   android:layout_marginTop="10dp"
                   android:textSize="25sp"
                   android:gravity="center"
                   android:background="#FF5722"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Seed treatment"
                   android:layout_marginTop="8dp"
                   android:textSize="25sp"
                   android:background="#9C27B0"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#E91E63"
                   android:layout_marginTop="8dp"
                   android:fontFamily="serif"
                   android:textSize="20sp"
                   android:text="@string/sugar_seed"
                   />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Sowing"
                   android:layout_marginTop="8dp"
                   android:textSize="25sp"
                   android:background="#9C27B0"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#E91E63"
                   android:layout_marginTop="8dp"
                   android:fontFamily="serif"
                   android:textSize="20sp"
                   android:text="@string/sugar_sowing"
                   />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Fertilizers"
                   android:layout_marginTop="10dp"
                   android:textSize="25sp"
                   android:gravity="center"
                   android:background="#FF5722"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#E91E63"
                   android:layout_marginTop="8dp"
                   android:fontFamily="serif"
                   android:textSize="20sp"
                   android:text="@string/sugar_fertilizers"
                   />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Irrigation"
                   android:layout_marginTop="10dp"
                   android:textSize="25sp"
                   android:gravity="center"
                   android:background="#FF5722"
                   android:textColor="#FFFFFF"
                   android:fontFamily="serif"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#E91E63"
                   android:layout_marginTop="8dp"
                   android:fontFamily="serif"
                   android:textSize="20sp"
                   android:text="@string/sugar_Irrigation"
                   />
           </LinearLayout>
       </ScrollView>

   </LinearLayout>
</ScrollView>
</FrameLayout>